--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,17 @@
 spring.application.name=SimpleBoard
 
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
+spring.devtools.restart.additional-paths=src/main/webapp
+spring.web.resources.static-locations=classpath:/static/
 
-#spring.datasource.url=jdbc:mysql://localhost:3307/inflearn_assignment
-#spring.datasource.username=root
-#spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost:3306/assign?allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false&autoReconnectForPools=true&serverTimezone=Asia/Seoul&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# for debug
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
