--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths=src/main/webapp
 spring.web.resources.static-locations=classpath:/static/
 
-spring.datasource.url=jdbc:mysql://localhost:3306/assign?allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false&autoReconnectForPools=true&serverTimezone=Asia/Seoul&useUnicode=true&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}?allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false&autoReconnectForPools=true&serverTimezone=Asia/Seoul&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=${MYSQL_USERNAME}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
