--- a/localenv/docker-compose.yaml
+++ b/localenv/docker-compose.yaml
@@ -10,5 +10,5 @@ services:
       - ./mysql/volume:/var/lib/mysql
       - ./mysql/initdb.d:/docker-entrypoint-initdb.d
     container_name: assign
-    env_file : .localenv
+    env_file : local.env
     restart : always
