--- a/localenv/local.env
+++ b/localenv/local.env
@@ -1,5 +1,6 @@
 MYSQL_HOST = localhost
 MYSQL_PORT = 3306
 MYSQL_USERNAME = root
+MYSQL_ROOT_PASSWORD = password
 MYSQL_PASSWORD = password
 MYSQL_DATABASE = assign
